--- a/parametros/templates/sobre.html
+++ b/parametros/templates/sobre.html
@@ -14,5 +14,7 @@
         <h2 class="h2">Desenvolvido por: Marcos Körbes Werle</h2>
         <br>        
         <h3 class="h3">Link do projeto: <a href="https://github.com/marcoskw/licenca">Clique aqui</a></h3>       
+        <br>
+        <h2 class="h2">Versão:1.0.0</h2>
     </div>
 {% endblock 'body' %}
