--- a/empresa/templates/cadastrar_contato.html
+++ b/empresa/templates/cadastrar_contato.html
@@ -51,12 +51,12 @@
 
                 <div class="mb-3">
                     <label for="email" class="form-label">E-mail:</label>
-                    <input type="email" id="email" name="email" class="form-control" placeholder="Digite o e-mail..." required>
+                    <input type="email" id="email" name="email" class="form-control" placeholder="Digite o e-mail...">
                 </div>
 
                 <div class="mb-3">
                     <label for="telefone" class="form-label">Telefone:</label>
-                    <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="Digite o telefone..." required>
+                    <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="Digite o telefone...">
                 </div>
 
                 <div class="form-group">
