adicionando o mailto e bat para inicio do projeto

--- a/empresa/templates/listar_contatos.html
+++ b/empresa/templates/listar_contatos.html
@@ -40,7 +40,7 @@
                         <td>{{ contato.nome_contato }}</td>
                         <td>{{ contato.empresa }}</td>
                         <td>{{ contato.setor }}</td>
-                        <td>{{ contato.email }}</td>
+                        <td><a href="mailto:{{ contato.email }}">{{ contato.email }}</a></td>
                         <td>{{ contato.telefone }}</td>                        
                         <td>{{ contato.status }}</td>
                         <td>
