--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -66,7 +66,7 @@
       </li>
       <!-- MENU WIKI -->
       <li class="nav-item">
-        <a class="nav-link" href="#">Wiki</a>
+        <a class="nav-link" href="{% url "wiki_lista" %}">Wiki</a>
       </li>         
     </ul>
     <!-- FORMULÁRIO DE LOGOUT -->
