adicionando pesquisa de post da wiki

--- a/wiki/templates/lista_wiki.html
+++ b/wiki/templates/lista_wiki.html
@@ -7,9 +7,15 @@
 {% include "partials/barra_navegacao.html" %}
 
 <div class="container my-5">
-    <div class="d-flex align-items-center justify-content-between mb-4">
-        <h2>Wiki</h2>
-        <a href="{% url 'admin:wiki_post_add' %}" class="btn btn-outline-success">Cadastrar novo</a>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="d-flex align-items-center">
+            <h2 class="mr-3">Wiki</h2>
+            <a href="{% url 'admin:wiki_post_add' %}" class="btn btn-outline-success">Cadastrar</a>
+        </div>
+        <form class="form-inline" method="GET" action="{% url 'consulta_post' %}">
+            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar..." aria-label="Pesquisar" name="q" value="{{ request.GET.q }}">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
+        </form>
     </div>
 
     {% if messages %}
