configurando etiqueta de identificação e customizando lista_wiki

--- a/equipamentos/templates/cadastrar_computador.html
+++ b/equipamentos/templates/cadastrar_computador.html
@@ -9,6 +9,7 @@
 
 <div class="container my-5">
     <h2 class="mb-4">Cadastro de Computador</h2>
+    <h3 class="mb-2 h4">Etiqueta: {{ proximo_computador }}</h3>
     
     {% if messages %}
         <div class="alert-container">
