Adicionando setor na listagem de computadores

--- a/equipamentos/templates/listar_computadores.html
+++ b/equipamentos/templates/listar_computadores.html
@@ -29,6 +29,7 @@
                     <th scope="col">ID</th>
                     <th scope="col">Nome Rede</th>
                     <th scope="col">Operador</th>
+                    <th scope="col">Setor</th>
                     <th scope="col">Marca</th>
                     <th scope="col">Modelo</th>
                     <th scope="col">Serial Number</th>      
@@ -41,6 +42,7 @@
                         <td>{{ computador.id }}</td>
                         <td>{{ computador.nome_rede }}</td>
                         <td>{{ computador.operador }}</td>
+                        <td>{{ computador.setor }}</td>
                         <td>{{ computador.marca }}</td>
                         <td>{{ computador.modelo }}</td>
                         <td>{{ computador.serial_number }}</td>                                                                                                
