Customizando home - Adicionando Próximos computadores para verificação

--- a/parametros/templates/home.html
+++ b/parametros/templates/home.html
@@ -22,24 +22,41 @@
         </div>
 
         <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Últimas Notícias</h5>
-                        <p class="card-text">Aqui você pode adicionar informações sobre as últimas notícias ou atualizações do sistema.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Próximos Computadores para checagem:</h5>
-                        <p class="card-text">Seção destinada para fazer verificação de computadores.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
 
+            <div class="col-md-6">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Demandas Pendentes:</h5>
+                        <ul class="list-group">
+                            <li class="list-group-item">Lista 1</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Próximos Computadores para Verificação:</h5>
+                        <ul class="list-group">
+                            {% for computador in computadores_verificacao %}
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    <div>
+                                        <strong>ID Etiqueta:</strong> {{ computador.id }}<br>
+                                        <strong>Nome Rede:</strong> {{ computador.nome_rede }}<br>
+                                        <strong>Operador:</strong> {{ computador.operador }}<br>
+                                        <strong>Setor:</strong> {{ computador.setor }}<br>
+                                        <strong>Última Atualização:</strong> {{ computador.data_ultima_atualizacao|date:"d/m/Y" }}<br>
+                                        <strong>Data de Verificação:</strong> {{ computador.proxima_verificacao|date:"d/m/Y" }}                                       
+                                    </div>
+                                    <button class="btn btn-info btn-sm">Fazer Verificação</button>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Outras Informações</h5>
