Ajustando as cores para as datas de verificação

--- a/parametros/templates/home.html
+++ b/parametros/templates/home.html
@@ -39,6 +39,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Próximos Computadores para Verificação:</h5>
                         <ul class="list-group">
+                            {% now "Y-m-d" as hoje %}
                             {% for computador in computadores_verificacao %}
                                 <li class="list-group-item d-flex justify-content-between align-items-center">
                                     <div>
@@ -47,7 +48,22 @@
                                         <strong>Operador:</strong> {{ computador.operador }}<br>
                                         <strong>Setor:</strong> {{ computador.setor }}<br>
                                         <strong>Última Atualização:</strong> {{ computador.data_ultima_atualizacao|date:"d/m/Y" }}<br>
-                                        <strong>Data de Verificação:</strong> {{ computador.proxima_verificacao|date:"d/m/Y" }}                                       
+            
+                                        <strong>Data de Verificação:</strong> 
+                                        {% if computador.proxima_verificacao|date:"Y-m-d" < hoje %}
+                                            <span style="color: red; font-weight: bold;">
+                                                {{ computador.proxima_verificacao|date:"d/m/Y" }}
+                                            </span>
+                                        {% elif computador.proxima_verificacao|date:"Y-m-d" == hoje %}
+                                            <span style="color: green; font-weight: bold;">
+                                                {{ computador.proxima_verificacao|date:"d/m/Y" }}
+                                            </span>
+                                        {% else %}
+                                            <span style="color: green; font-weight: bold;">
+                                                {{ computador.proxima_verificacao|date:"d/m/Y" }}
+                                            </span>
+                                        {% endif %}
+                                        <br>
                                     </div>
                                     <button class="btn btn-info btn-sm">Fazer Verificação</button>
                                 </li>
@@ -55,7 +71,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div>            
             
         <div class="card">
             <div class="card-body">
