--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="{% url 'home' %}">TI - EXATRON</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -72,7 +72,7 @@
     <!-- FORMULÁRIO DE LOGOUT -->
     <form class="form-inline ml-auto" action="{% url 'logout' %}" method="post">
       {% csrf_token %}
-      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Sair</button>
+      <button class="btn btn-danger my-2 my-sm-0" type="submit">Sair</button>
     </form>
   </div>
 </nav>
